--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
             <img src="images/mobile.png" alt="web development" />
           </div>
           <div class="card_content">
-            <h3>Web Development</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione quibusdam ex quaerat quasi nostrum tempore.</p>
+            <h3>Parallax effect</h3>
+            <p>Loreeeeem ipsum dolor sit amet, consectetur adipisicing elit. Ratione quibusdam ex quaerat quasi nostrum tempore.</p>
           </div>
         </div>
       </div>
